--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -10,3 +10,27 @@
 .i-gridlayout-margin-right {
 	padding-right: 18px;
 }
+
+.i-gridlayout-grid {
+	margin:0;
+	padding:0;
+	border-collapse: collapse;
+	border:0;
+}
+
+.i-gridlayout-cell {
+	margin:0;
+	padding:0;
+}
+
+.i-gridlayout-spacing .i-gridlayout-cell {
+	padding-left: 15px;
+	padding-top:15px;
+}
+
+.i-gridlayout-spacing .i-gridlayout-firstcol {
+	padding-left: 0;
+}
+.i-gridlayout-spacing .i-gridlayout-firstrow {
+	padding-top: 0;
+}
