--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -508,6 +508,38 @@ input.i-modified,
 .i-formlayout-captioncell {
 	text-align:right;
 }
+
+.i-formlayout-spacing .i-formlayout-row .i-formlayout-captioncell, 
+.i-formlayout-spacing .i-formlayout-row .i-formlayout-contentcell,
+.i-formlayout-spacing .i-formlayout-row .i-formlayout-errorcell {
+	padding-top: 8px;
+}
+
+.i-formlayout-spacing .i-formlayout-firstrow .i-formlayout-captioncell, 
+.i-formlayout-spacing .i-formlayout-firstrow .i-formlayout-contentcell,
+.i-formlayout-spacing .i-formlayout-firstrow .i-formlayout-errorcell {
+	padding-top: 0;
+}
+
+.i-formlayout-margin-top .i-formlayout-firstrow .i-formlayout-captioncell, 
+.i-formlayout-margin-top .i-formlayout-firstrow .i-formlayout-contentcell,
+.i-formlayout-margin-top .i-formlayout-firstrow .i-formlayout-errorcell {
+	padding-top: 15px;
+}
+.i-formlayout-margin-bottom .i-formlayout-lastrow .i-formlayout-captioncell,
+.i-formlayout-margin-bottom .i-formlayout-lastrow .i-formlayout-contentcell,
+.i-formlayout-margin-bottom .i-formlayout-lastrow .i-formlayout-errorcell {
+	padding-bottom: 15px;
+}
+.i-formlayout-margin-left .i-formlayout-captioncell {
+	padding-left: 18px;
+} 
+.i-formlayout-margin-right .i-formlayout-contentcell {
+	padding-right: 18px;
+}
+
+/* form */
+
 .i-form-errormessage {
 	background: transparent url(icons/16/error.png) no-repeat top left;
 	padding-left: 20px;
