--- a/src/com/itmill/toolkit/demo/reservation/gwt/public/reservr/styles.css
+++ b/src/com/itmill/toolkit/demo/reservation/gwt/public/reservr/styles.css
@@ -25,7 +25,7 @@
 	color: #fff;
 	background: #5daee8 url(img/calendar-time-selected.gif) no-repeat;
 }
-td.i-datefield-entrycalendar-time {
+.i-datefield-calendarpanel td.i-datefield-entrycalendar-time {
 	width: 45px;
 	padding: 2px 4px;
 	white-space: nowrap;
