--- a/WebContent/ITMILL/themes/default/table/table.css
+++ b/WebContent/ITMILL/themes/default/table/table.css
@@ -129,6 +129,14 @@
 	position: relative; /* hide this from IE, it works without it */
 }
 
+* html .i-table-column-selector {
+	position: static;
+}
+
+*+html .i-table-column-selector  {
+	position: static;
+}
+
 .i-table-focus-slot-left {
 	border-left: 2px solid #b6bbbc;
 	margin-right: -2px;
