--- a/WebContent/ITMILL/themes/reservr/styles.css
+++ b/WebContent/ITMILL/themes/reservr/styles.css
@@ -9,7 +9,7 @@ body {
 	margin: 0;
 }
 
-#itmill-ajax-window {
+#Reservr {
 	background-color: transparent;
 }
 
@@ -81,7 +81,7 @@ textarea.i-textfield {
 	font-weight: bold;
 }
 
-#itmill-ajax-window .i-button-selected-link {
+#Reservr .i-button-selected-link {
 	border: 0px;
 	text-align: left;
 	text-decoration: none;
