--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1127,7 +1127,8 @@ input.i-modified,
   --------------------------*/
 
 .i-slider {
-	border: 1px solid #cccfd0;
+	border-top: 1px solid #cccfd0;
+	border-bottom: 1px solid #cccfd0;
 	height: 3px;
 	margin: 5px 0;
 }
@@ -1136,6 +1137,9 @@ input.i-modified,
 	height: 2px;
 	border-top: 1px solid #cbcdce;
 	background: #f3f3f4;
+	border-left: 1px solid #cccfd0;
+	border-right: 1px solid #cccfd0;
+	
 }
 .i-slider-handle {
 	background: transparent url(slider/img/handle-horizontal.png);
@@ -1148,6 +1152,17 @@ input.i-modified,
 .i-slider-handle:hover {
 	background-position: left bottom;
 }
+
+.i-slider-scrollbar .i-slider-handle,
+.i-slider-scrollbar.i-slider-vertical .i-slider-handle {
+	background: #ffffff;
+	border: 1px solid #cccfd0;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	
+}
+
 /* TODO
 .i-slider-bigger {
 	background: #dde4ef url(slider/img/arrow-right.png);
@@ -1185,11 +1200,17 @@ input.i-modified,
 	width: 3px;
 	height: auto;
 	margin: 0 5px;
+	border: none;
+	border-left: 1px solid #cccfd0;
+	border-right: 1px solid #cccfd0;
 }
 .i-slider-vertical .i-slider-base {
 	width: 2px;
 	border-left: 1px solid #cbcdce;
+	border-right: none;
 	background: #f3f3f4;
+	border-top: 1px solid #cccfd0;
+	border-bottom: 1px solid #cccfd0;	
 }
 .i-slider-vertical .i-slider-handle {
 	background: transparent url(slider/img/handle-vertical.png);
