Window (caption) can have icon (fixes #1761)
svn changeset:4855 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1854,6 +1854,11 @@ input.i-modified,
 	overflow:hidden;
 }
 
+.i-window-header .i-icon {
+	vertical-align: bottom;
+}
+
+
 .i-window-outerheader:before {
 	display: block;
 	content: "";
