Readonly -style was not applied as expected. (Re)Fixes #1758
svn changeset:4859 branch:trunk

--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -100,7 +100,8 @@
 .i-filterselect-button:hover {
 	background-position: bottom left;
 }
-.i-disabled .i-filterselect-button:hover {
+.i-disabled .i-filterselect-button:hover,
+.i-readonly .i-filterselect-button:hover {
 	background-position: top left;
 }
 
