--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -999,7 +999,8 @@ input.i-modified,
 .i-filterselect-button:hover {
 	background-position: bottom left;
 }
-.i-disabled .i-filterselect-button:hover {
+.i-disabled .i-filterselect-button:hover,
+.i-readonly .i-filterselect-button:hover {
 	background-position: top left;
 }
 
