Fixed #1821 : Required, modified and error background styles should be disabled in default theme
svn changeset:4889 branch:trunk

--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -18,7 +18,16 @@
 	text-decoration: underline;
 }
 
+/* Disabled by default
 .i-checkbox-error {
 	background:transparent;
 	background-color: #FFE0E0;
 }
+*/
+
+/* Disabled by default
+.i-checkbox-required {
+	background:transparent;
+	background-color: #FFE0E0;
+}
+*/
