--- a/WebContent/demo/css/demos.css
+++ b/WebContent/demo/css/demos.css
@@ -122,7 +122,7 @@ a.more span {
 
 .content h2 {
 	font-size: 18px;
-	color: #f14c1a;
+	color: #39529b;
 	height: 18px;
 	padding: 4px 0 6px 34px;
 	letter-spacing: -0.02em;
