--- a/WebContent/ITMILL/themes/default/caption/caption.css
+++ b/WebContent/ITMILL/themes/default/caption/caption.css
@@ -15,6 +15,8 @@
 }
 * html .i-errorindicator {
 	margin-left:-3px;
+	background: transparent none;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="../icons/16/error.png", sizingMethod="scale");
 }
 *+html .i-errorindicator {
 	margin-left:-3px;
