For #1859 "error messages overflow popup"; made tooltip maxwidth wider, overflow:auto, and added the possibility to mouseover the tooltip in order to scroll or cut&paste.
svn changeset:4991 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -99,6 +99,7 @@
 	padding: 7px;
 	background-color: #FFE0E0;
 	border: 1px solid #FFB0B0;
+	overflow: auto;
 }
 /* body tag created by servlet */
 .i-generated-body {
