Added extensive layout testing features to #1710 test
svn changeset:4999 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -1,6 +1,23 @@
 @import url(../default/styles.css);
 
 /*****************************************************************************/
+/* Ticket 1710                                                               */
+/*****************************************************************************/
+
+.i-orderedlayout-controls {
+	background-color: #eee;
+	border-bottom: 2px solid #aaa;
+}
+
+.i-orderedlayout-tested-layout, .i-gridlayout-tested-layout, .i-expandllayout-tested-layout {
+	background-color: #fff;
+}
+	
+.i-panel-content-layout-testing-panel {
+	background-color: #bbb;	
+}
+	
+/*****************************************************************************/
 /* Ticket 1857                                                               */
 /*****************************************************************************/
 
