Layout tests complete... Now they should test about the all of the layouting features that might be somehow related to the #1710
svn changeset:5000 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -5,8 +5,8 @@
 /*****************************************************************************/
 
 .i-orderedlayout-controls {
-	background-color: #eee;
-	border-bottom: 2px solid #aaa;
+	overflow: auto;
+	white-space : nowrap; 
 }
 
 .i-orderedlayout-tested-layout, .i-gridlayout-tested-layout, .i-expandllayout-tested-layout {
@@ -14,7 +14,7 @@
 }
 	
 .i-panel-content-layout-testing-panel {
-	background-color: #bbb;	
+	background-color: #eee;	
 }
 	
 /*****************************************************************************/
