Major revision to OrderedLayout to fix #1875 . Likely to cause regressions, do not include this to 5.2.x before #1710 has been fully closed and tested.
svn changeset:5002 branch:trunk

--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -31,3 +31,24 @@
 	background-color: #FFE0E0;
 }
 */
+
+.i-checkbox *, .i-button * {
+	float: left;
+}
+
+.i-checkbox:after, .i-button:after {
+  	content: ".";
+	display: block;
+	height: 0;
+    clear: both;
+    visibility: hidden;
+}
+		
+.i-checkbox, .i-button {
+	display: inline-block;
+}
+
+/* Hides from IE-mac \*/
+* html .i-caption, * html .i-orderedlayout-wrap { height: 1%; }
+.i-caption, .i-orderedlayout-wrap { display: block; }
+/* End hide from IE-mac */
