Fixes #1841 (streched, pixellated buttons in IE)
svn changeset:5012 branch:trunk

--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -18,6 +18,19 @@
 	text-decoration: underline;
 }
 
+/* fixes streched buttons in IE6 */
+* html .i-button {
+	overflow: visible;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+/* fixes streched buttons in IE7 */
+*+html .i-button {
+	overflow: visible;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
 /* Disabled by default
 .i-checkbox-error {
 	background:transparent;
