--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -61,7 +61,23 @@
 	overflow: visible;
 	padding-left: 10px;
 	padding-right: 10px;
+	width: expression(this.offsetWidth + "px");
 }
+
+	
+/* Error indicator on checkbox fix for IE6 */
+* html .i-checkbox * { display: block; float: left;}
+* html .i-checkbox .i-errorindicator {padding-right:4px;}
+
+/* Error indicator on checkbox fix for IE7 */
+*+ html .i-checkbox * { display: block; float: left;}
+*+ html .i-checkbox .i-errorindicator {padding-right:7px;}
+
+/* Error indicator on button fix for IE7 */
+*+ html button .i-errorindicator { display:inline; padding-right:5px; }
+
+/* Error indicator on button fix for IE6 */
+* html button .i-errorindicator { display:inline; padding-right:5px;}
 
 
 /* Disabled by default
